# repos

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  Repos.sample.toml  Repos.template.toml  TODO.md  repos.sample.toml  repos.template.toml
doc/: repos.1
src/: lib.rs  manager.rs  metadata.rs  repos.rs  util.rs
src/vcs/: git.rs  hg.rs  mod.rs  util.rs
